1.5.4
-----
1. Fix "0 Items" when showing lyrics in browse view.
2. Poll server status every 2 seconds during scans.
3. Fix showing podcast information - revert change to show images for text
   items.
4. Fix adding/playing albums from advanced search results.
5. Scroll advanced seach results into view.
6. Add native callback, allowing to pass player status to native application.

1.5.3
-----
 1. Adjust toolbar margins slightly, to improve icon alignment.
 2. Map icons from loop_loop
 3. Draw small update icon top-right of main menu icon when updates available,
    as opposed to replacing menu icon.
 4. Set width and height of open-mini player button to 24px to ensure circle.
 5. Remove initial 'http://' from add 'URL to queue' dialog to help with pasting
    URLs.
 6. Allow showing of plugin images as browse background.
 7. If listing a radio app's entries and all images are the same, then hide
    images. e.g. iHeartRadio and RadioNet
 8. Add monochrome radio.net icon.
 9. Enable hover add/play buttons for playlists and playlist tracks.
10. Fix translations where there are 2 placeholders.
11. Fix adding/playing selection.
12. Show textarea at top of list, if its in response and more than 5 characters.
13. Restrict add/play all to predefined set of apps.
14. Correctly report total track count for multi-CD album when listed as 1 album
    in LMS.
15. Fix ctrl+left causing current track to go to start - should be checking for
    alt+left.
16. Use page up/down to scroll browse and queue views - alt + page up/down for
    queue in desktop layout (either with or without alt for mobile layout)
17. If loop_loop contains text items with images and text length of 75 chars or
    less, then treat as a list of images.
18. Show images for text items in loop_loop.
19. Don't disable volume controls for powered off players, as it is possible to
    alter the volume of these.
20. If set to show menu when click on an audio item, then show menu if click on