@@ -7,6 +7,7 @@
 4. Fix adding/playing albums from advanced search results.
 5. Scroll advanced seach results into view.
 6. Add native callback, allowing to pass player status to native application.
+7. Hide button to delete virtual library unless settings are unlocked.
 
 1.5.3
 -----
